syntax = "proto3";

package settings.profile.password.request;

message Request {
  string old_password = 1;
  string new_password = 2;
  string new_password_confirmation = 3;
}
